beam search runs and works some

--- a/examples/beerqa/beerqa.ipynb
+++ b/examples/beerqa/beerqa.ipynb
@@ -10,10 +10,9 @@
     "from typing import List\n",
     "\n",
     "import numpy as np\n",
-    "from scipy.stats import t\n",
     "from tensorzero import AsyncTensorZeroGateway\n",
     "from tqdm.asyncio import trange\n",
-    "from utils import BeerQA, execute_tool_call"
+    "from utils import BeerQA, confidence_interval, execute_tool_call"
    ]
   },
   {
@@ -126,20 +125,6 @@
     "    )\n",
     "    score = await grade_answer(client, question, gt_answer, submitted_answer)\n",
     "    return score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def confidence_interval(data, confidence=0.95):\n",
-    "    n = len(data)\n",
-    "    mean = np.mean(data)\n",
-    "    sem = np.std(data, ddof=1) / np.sqrt(n)\n",
-    "    h = sem * t.ppf((1 + confidence) / 2.0, n - 1)\n",
-    "    return mean - h, mean + h"
    ]
   },
   {
